Bug #1306 - Homepage: New OpenLab Members Box: Text not Wrapping

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1055,10 +1055,15 @@ body{
             max-width: 100%;
             .home-new-member{
                 width: 50%;
+                height: 274px;
                 .home-new-member-avatar,
                 .home-new-member-info{
                     margin: 0 auto;
                     width: 97%;
+                    h2{
+                        margin: 0;
+                        padding: 20px 0 15px;
+                    }
                 }
             }
         }
